Add translation modeler

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -560,5 +560,104 @@
     "Set the element's text color": "Set the element's text color",
     "List of options available in the radio button group": "List of options available in the radio button group",
     "Add Option": "Add Option",
-    "Add Column": "Add Column"
+    "Add Column": "Add Column",
+    "BPMN": "BPMN",
+    "Filter": "Filter",
+    "Delay": "Delay",
+    "day": "day",
+    "S": "S",
+    "M": "M",
+    "T": "T",
+    "W": "W",
+    "Th": "T",
+    "F": "F",
+    "Sa": "S",
+    "week": "week",
+    "month": "month",
+    "year": "year",
+    "Wait until specific date/time": "Wait until specific date/time",
+    "Ok": "Ok",
+    "Start date": "Start date",
+    "Ends": "Ends",
+    "Never": "Never",
+    "On": "On",
+    "End date": "End date",
+    "After": "After",
+    "occurrences": "occurrences",
+    "Date/Time": "Date/Time",
+    "ProcessMaker Modeler": "ProcessMaker Modeler",
+    "Upload XML": "Upload XML",
+    "Download XML": "Download XML",
+    "Upload BPMN File": "Upload BPMN File",
+    "Upload file": "Upload file",
+    "Undo": "Undo",
+    "Redo": "Redo",
+    "no problems to report": "no problems to report",
+    "Auto validate": "Auto validate",
+    "Problems": "Problems",
+    "Identifier": "Identifier",
+    "The id field should be unique across all elements in the diagram": "The id field should be unique across all elements in the diagram",
+    "The Name of the Process": "The Name of the Process",
+    "The Name of the Sequence Flow": "The Name of the Sequence Flow",
+    "Expression": "Expression",
+    "Enter the expression that describes the workflow condition": "Enter the expression that describes the workflow condition",
+    "Direction": "Direction",
+    "Select Direction": "Select Direction",
+    "None": "None",
+    "One": "One",
+    "Both": "Both",
+    "initial": "initial",
+    "Association": "Association",
+    "Call Activity": "Call Activity",
+    "End Event": "End Event",
+    "The Name of the End Event": "The Name of the End Event",
+    "Event-based Gateway": "Event-based Gateway",
+    "The Name of the Gateway": "The Name of the Gateway",
+    "Exclusive Gateway": "Exclusive Gateway",
+    "Gateway": "Gateway",
+    "Inclusive Gateway": "Inclusive Gateway",
+    "Select direction of gateway": "Select direction of gateway",
+    "Diverging": "Diverging",
+    "Converging": "DelConvergingay",
+    "Intermediate Message Catch Event": "Intermediate Message Catch Event",
+    "The Name of the Intermediate Message Catch Event": "The Name of the Intermediate Message Catch Event",
+    "Message Event Identifier": "Message Event Identifier",
+    "Data Name": "Data Name",
+    "The Name of the data name": "The Name of the data name",
+    "Allowed Users": "Allowed Users",
+    "Select allowed users": "Select allowed users",
+    "Allowed Groups": "Allowed Groups",
+    "Select allowed groups": "Select allowed groups",
+    "Whitelist": "Whitelist",
+    "IP/Domain whitelist": "IP/Domain whitelist",
+    "Intermediate Timer Event": "Intermediate Timer Event",
+    "The Name of the Intermediate Event": "The Name of the Intermediate Event",
+    "Timing Control": "Timing Control",
+    "Time expression": "Time expression",
+    "Message Flow": "Message Flow",
+    "The Name of the Message Flow": "The Name of the Message Flow",
+    "Parallel Gateway": "Parallel Gateway",
+    "Pool": "Pool",
+    "The Name of the Pool": "The Name of the Pool",
+    "Lane": "Lane",
+    "The Name of the Lane": "The Name of the Lane",
+    "Script Task": "Script Task",
+    "The name of the script task": "The name of the script task",
+    "Declare as global": "Declare as global",
+    "Sequence Flow": "Sequence Flow",
+    "Service Task": "Service Task",
+    "Start Event": "Start Event",
+    "The Name of the Start Event": "The Name of the Start Event",
+    "Start Timer Event": "Start Timer Event",
+    "Task": "Task",
+    "The Name of the Task": "The Name of the Task",
+    "Text Annotation": "Text Annotation",
+    "Annotation Description": "Annotation Description",
+    "Body of the text annotation": "Body of the text annotation",
+    "New Text Annotation": "New Text Annotation",
+    "Repeat every": "Repeat every",
+    "Repeat on": "Repeat on",
+    "Due In": "Due In",
+    "Time when the task will due (hours)": "Time when the task will due (hours)",
+    "Assign user to task": "Assign user to task"
 }
