--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -562,108 +562,117 @@
     "Add Column": "yo soy espanol",
     "BPMN": "yo soy espanol",
     "Filter": "yo soy espanol",
-    "Delay" : "yo soy espanol",
-    "day" : "yo soy espanol",
-    "S" : "yo soy espanol",
-    "M" : "yo soy espanol",
-    "T" : "yo soy espanol",
-    "W" : "yo soy espanol",
-    "Th" : "yo soy espanol",
-    "F" : "yo soy espanol",
-    "Sa" : "yo soy espanol",
-    "week" : "yo soy espanol",
-    "month" : "yo soy espanol",
-    "year" : "yo soy espanol",
-    "Wait until specific date/time" : "yo soy espanol",
-    "Save" : "yo soy espanol",
-    "Cancel" : "yo soy espanol",
-    "Ok" : "yo soy espanol",
-    "Start date" : "yo soy espanol",
-    "Ends" : "yo soy espanol",
-    "Never" : "yo soy espanol",
-    "On" : "yo soy espanol",
-    "End date" : "yo soy espanol",
-    "After" : "yo soy espanol",
-    "occurrences" : "yo soy espanol",
-    "Type" : "yo soy espanol",
-    "Date/Time" : "yo soy espanol",
-    "ProcessMaker Modeler" : "yo soy espanol",
-    "Upload XML" : "yo soy espanol",
-    "Download XML" : "yo soy espanol",
-    "Upload BPMN File" : "yo soy espanol",
-    "Upload file" : "yo soy espanol",
-    "Undo" : "yo soy espanol",
-    "Redo" : "yo soy espanol",
-    "no problems to report" : "yo soy espanol",
-    "Auto validate" : "yo soy espanol",
-    "Problems" : "yo soy espanol",
-    "Configuration" : "yo soy espanol",
-    "Identifier" : "yo soy espanol",
-    "The id field should be unique across all elements in the diagram" : "yo soy espanol",
-    "Name" : "yo soy espanol",
-    "The Name of the Process" : "yo soy espanol",
-    "The Name of the Sequence Flow" : "yo soy espanol",
-    "Expression" : "yo soy espanol",
-    "Enter the expression that describes the workflow condition" : "yo soy espanol",
-    "Direction" : "yo soy espanol",
-    "Select Direction" : "yo soy espanol",
-    "None" : "yo soy espanol",
-    "One" : "yo soy espanol",
-    "Both" : "yo soy espanol",
-    "Processes" : "yo soy espanol",
-    "initial" : "yo soy espanol",
-    "Association" : "yo soy espanol",
-    "Call Activity" : "yo soy espanol",
-    "End Event" : "yo soy espanol",
-    "The Name of the End Event" : "yo soy espanol",
-    "Event-based Gateway" : "yo soy espanol",
-    "The Name of the Gateway" : "yo soy espanol",
-    "Exclusive Gateway" : "yo soy espanol",
-    "Gateway" : "yo soy espanol",
-    "Inclusive Gateway" : "yo soy espanol",
-    "Select direction of gateway" : "yo soy espanol",
-    "Diverging" : "yo soy espanol",
-    "Converging" : "yo soy espanol",
-    "Intermediate Message Catch Event" : "yo soy espanol",
-    "The Name of the Intermediate Message Catch Event" : "yo soy espanol",
-    "Message Event Identifier" : "yo soy espanol",
-    "Data Name" : "yo soy espanol",
-    "The Name of the data name" : "yo soy espanol",
-    "Allowed Users" : "yo soy espanol",
-    "Select allowed users" : "yo soy espanol",
-    "Allowed Groups" : "yo soy espanol",
-    "Select allowed groups" : "yo soy espanol",
-    "Whitelist" : "yo soy espanol",
-    "IP/Domain whitelist" : "yo soy espanol",
-    "Intermediate Timer Event" : "yo soy espanol",
-    "The Name of the Intermediate Event" : "yo soy espanol",
-    "Timing Control" : "yo soy espanol",
-    "Time expression" : "yo soy espanol",
-    "Message Flow" : "yo soy espanol",
-    "The Name of the Message Flow" : "yo soy espanol",
-    "Parallel Gateway" : "yo soy espanol",
-    "Pool" : "yo soy espanol",
-    "The Name of the Pool" : "yo soy espanol",
-    "Lane" : "yo soy espanol",
-    "The Name of the Lane" : "yo soy espanol",
-    "Script Task" : "yo soy espanol",
-    "The name of the script task" : "yo soy espanol",
-    "Declare as global" : "yo soy espanol",
-    "Sequence Flow" : "yo soy espanol",
-    "Service Task" : "yo soy espanol",
-    "Start Event" : "yo soy espanol",
-    "The Name of the Start Event" : "yo soy espanol",
-    "Start Timer Event" : "yo soy espanol",
-    "Task" : "yo soy espanol",
-    "The Name of the Task" : "yo soy espanol",
-    "Text Annotation" : "yo soy espanol",
-    "Annotation Description" : "yo soy espanol",
-    "Body of the text annotation" : "yo soy espanol",
-    "New Text Annotation" : "yo soy espanol",
+    "Delay": "yo soy espanol",
+    "day": "yo soy espanol",
+    "S": "yo soy espanol",
+    "M": "yo soy espanol",
+    "T": "yo soy espanol",
+    "W": "yo soy espanol",
+    "Th": "yo soy espanol",
+    "F": "yo soy espanol",
+    "Sa": "yo soy espanol",
+    "week": "yo soy espanol",
+    "month": "yo soy espanol",
+    "year": "yo soy espanol",
+    "Wait until specific date/time": "yo soy espanol",
+    "Save": "yo soy espanol",
+    "Cancel": "yo soy espanol",
+    "Ok": "yo soy espanol",
+    "Start date": "yo soy espanol",
+    "Ends": "yo soy espanol",
+    "Never": "yo soy espanol",
+    "On": "yo soy espanol",
+    "End date": "yo soy espanol",
+    "After": "yo soy espanol",
+    "occurrences": "yo soy espanol",
+    "Type": "yo soy espanol",
+    "Date/Time": "yo soy espanol",
+    "ProcessMaker Modeler": "yo soy espanol",
+    "Upload XML": "yo soy espanol",
+    "Download XML": "yo soy espanol",
+    "Upload BPMN File": "yo soy espanol",
+    "Upload file": "yo soy espanol",
+    "Undo": "yo soy espanol",
+    "Redo": "yo soy espanol",
+    "no problems to report": "yo soy espanol",
+    "Auto validate": "yo soy espanol",
+    "Problems": "yo soy espanol",
+    "Configuration": "yo soy espanol",
+    "Identifier": "yo soy espanol",
+    "The id field should be unique across all elements in the diagram": "yo soy espanol",
+    "Name": "yo soy espanol",
+    "The Name of the Process": "yo soy espanol",
+    "The Name of the Sequence Flow": "yo soy espanol",
+    "Expression": "yo soy espanol",
+    "Enter the expression that describes the workflow condition": "yo soy espanol",
+    "Direction": "yo soy espanol",
+    "Select Direction": "yo soy espanol",
+    "None": "yo soy espanol",
+    "One": "yo soy espanol",
+    "Both": "yo soy espanol",
+    "Processes": "yo soy espanol",
+    "initial": "yo soy espanol",
+    "Association": "yo soy espanol",
+    "Call Activity": "yo soy espanol",
+    "End Event": "yo soy espanol",
+    "The Name of the End Event": "yo soy espanol",
+    "Event-based Gateway": "yo soy espanol",
+    "The Name of the Gateway": "yo soy espanol",
+    "Exclusive Gateway": "yo soy espanol",
+    "Gateway": "yo soy espanol",
+    "Inclusive Gateway": "yo soy espanol",
+    "Select direction of gateway": "yo soy espanol",
+    "Diverging": "yo soy espanol",
+    "Converging": "yo soy espanol",
+    "Intermediate Message Catch Event": "yo soy espanol",
+    "The Name of the Intermediate Message Catch Event": "yo soy espanol",
+    "Message Event Identifier": "yo soy espanol",
+    "Data Name": "yo soy espanol",
+    "The Name of the data name": "yo soy espanol",
+    "Allowed Users": "yo soy espanol",
+    "Select allowed users": "yo soy espanol",
+    "Allowed Groups": "yo soy espanol",
+    "Select allowed groups": "yo soy espanol",
+    "Whitelist": "yo soy espanol",
+    "IP/Domain whitelist": "yo soy espanol",
+    "Intermediate Timer Event": "yo soy espanol",
+    "The Name of the Intermediate Event": "yo soy espanol",
+    "Timing Control": "yo soy espanol",
+    "Time expression": "yo soy espanol",
+    "Message Flow": "yo soy espanol",
+    "The Name of the Message Flow": "yo soy espanol",
+    "Parallel Gateway": "yo soy espanol",
+    "Pool": "yo soy espanol",
+    "The Name of the Pool": "yo soy espanol",
+    "Lane": "yo soy espanol",
+    "The Name of the Lane": "yo soy espanol",
+    "Script Task": "yo soy espanol",
+    "The name of the script task": "yo soy espanol",
+    "Declare as global": "yo soy espanol",
+    "Sequence Flow": "yo soy espanol",
+    "Service Task": "yo soy espanol",
+    "Start Event": "yo soy espanol",
+    "The Name of the Start Event": "yo soy espanol",
+    "Start Timer Event": "yo soy espanol",
+    "Task": "yo soy espanol",
+    "The Name of the Task": "yo soy espanol",
+    "Text Annotation": "yo soy espanol",
+    "Annotation Description": "yo soy espanol",
+    "Body of the text annotation": "yo soy espanol",
+    "New Text Annotation": "yo soy espanol",
     "Repeat every": "yo soy espanol",
     "Repeat on": "yo soy espanol",
     "Due In": "yo soy espanol",
     "Users": "yo soy espanol",
     "Time when the task will due (hours)": "yo soy espanol",
-    "Assign user to task": "yo soy espanol"
+    "Assign user to task": "yo soy espanol",
+    "Assign by Expression": "yo soy espanol",
+    "Loading...": "yo soy espanol.",
+    "Assigned Group": "yo soy espanol",
+    "Assigned User": "yo soy espanol",
+    "Previous Task Assignee": "yo soy espanol",
+    "Task Assignment": "yo soy espanol",
+    "Rule": "yo soy espanol",
+    "Allow Reassignment": "yo soy espanol",
+    "Last Saved:": "yo soy espanol"
 }
