script editor trans

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -669,5 +669,6 @@
     "Task Assignment": "Task Assignment",
     "Rule": "Rule",
     "Allow Reassignment": "Allow Reassignment",
-    "Last Saved:": "Last Saved:"
+    "Last Saved:": "Last Saved:",
+    "Script Config Editor": "Script Config Editor"
 }
