--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -674,5 +674,6 @@
     "Task Assignment": "yo soy espanol",
     "Rule": "yo soy espanol",
     "Allow Reassignment": "yo soy espanol",
-    "Last Saved:": "yo soy espanol"
+    "Last Saved:": "yo soy espanol",
+    "Script Config Editor": ""
 }
