--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -670,5 +670,6 @@
     "Rule": "Rule",
     "Allow Reassignment": "Allow Reassignment",
     "Last Saved:": "Last Saved:",
-    "Script Config Editor": "Script Config Editor"
+    "Script Config Editor": "Script Config Editor",
+    "CLOSE": "CLOSE"
 }
