--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -675,5 +675,6 @@
     "Rule": "yo soy espanol",
     "Allow Reassignment": "yo soy espanol",
     "Last Saved:": "yo soy espanol",
-    "Script Config Editor": ""
+    "Script Config Editor": "yo soy espanol",
+    "CLOSE": "yo soy espanol"
 }
