transaltions for modeler components

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -671,5 +671,6 @@
     "Allow Reassignment": "Allow Reassignment",
     "Last Saved:": "Last Saved:",
     "Script Config Editor": "Script Config Editor",
-    "CLOSE": "CLOSE"
+    "CLOSE": "CLOSE",
+    "Start Permission": "Start Permission"
 }
