--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -676,5 +676,6 @@
     "Allow Reassignment": "yo soy espanol",
     "Last Saved:": "yo soy espanol",
     "Script Config Editor": "yo soy espanol",
-    "CLOSE": "yo soy espanol"
+    "CLOSE": "yo soy espanol",
+    "Start Permission": "yo soy espanol"
 }
