--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -690,5 +690,7 @@
     "Script Configuration": "yo soy espanol",
     "Configuration JSON for the script task": "yo soy espanol",
     "Summary screen": "yo soy espanol",
-    "Summary screen that will be displayed when process finish with this End event.": "yo soy espanol"
+    "Summary screen that will be displayed when process finish with this End event.": "yo soy espanol",
+    "Refresh": "yo soy espanol",
+    "Enable": "yo soy espanol"
 }
