--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,6 +1,6 @@
 {
     "Are you sure you want to delete {{item}}?": "Are you sure you want to delete {{item}}?",
-    "About ProcessMaker 4": "About ProcessMaker 4",
+    "About ProcessMaker Spark": "About ProcessMaker Spark",
     "ProcessMaker v4.0 Beta 4": "ProcessMaker v4.0 Beta 4",
     "Report an issue": "Report an issue",
     "Get Help": "Get Help",
@@ -219,7 +219,7 @@
     "Assigned": "Assigned",
     "Request": "Request",
     "Request Received!": "Request Received!",
-    "ProcessMaker 4 is busy processing your request.": "ProcessMaker 4 is busy processing your request.",
+    "ProcessMaker Spark is busy processing your request.": "ProcessMaker Spark is busy processing your request.",
     "You can close this page.": "You can close this page.",
     "Processes": "Processes",
     "Profile": "Profile",
