Don't escape strings and remove duplicates

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -280,8 +280,8 @@
     "Due": "Due",
     "Started": "Started",
     "Open Request": "Open Request",
-    "We/'ve made it easy for you to make the following Requests.": "We/'ve made it easy for you to make the following Requests.",
-    "You don/'t have any Processes.": "You don/'t have any Processes.",
+    "We've made it easy for you to make the following Requests.": "We've made it easy for you to make the following Requests.",
+    "You don't have any Processes.": "You don't have any Processes.",
     "Please visit the Processes page": "Please visit the Processes page",
     "and click on +Process to get started.": "and click on +Process to get started.",
     "Please contact your administrator to get started.": "Please contact your administrator to get started.",
@@ -307,7 +307,7 @@
     "Copy Token To Clipboard": "Copy Token To Clipboard",
     "The auth client was ": "The auth client was ",
     "success": "success",
-    "Make sure you copy your access token now. You won/'t be able to see it again.": "Make sure you copy your access token now. You won/'t be able to see it again.",
+    "Make sure you copy your access token now. You won't be able to see it again.": "Make sure you copy your access token now. You won't be able to see it again.",
     "Access token generated successfully": "Access token generated successfully",
     "Are you sure to delete the token ": "Are you sure to delete the token ",
     "? Any services using it will no longer have access.": "? Any services using it will no longer have access.",
@@ -329,7 +329,7 @@
     "Forgot Password?": "Forgot Password?",
     "Log In": "Log In",
     "Forgot Your Password?": "Forgot Your Password?",
-    "Enter your email address and we/'ll send you a reset link.": "Enter your email address and we/'ll send you a reset link.",
+    "Enter your email address and we'll send you a reset link.": "Enter your email address and we'll send you a reset link.",
     "Email Address": "Email Address",
     "Request Reset Link": "Request Reset Link",
     "Back to Login": "Back to Login",
@@ -359,7 +359,7 @@
     "Your password has been reset!": "Your password has been reset!",
     "We have e-mailed your password reset link!": "We have e-mailed your password reset link!",
     "This password reset token is invalid.": "This password reset token is invalid.",
-    "We can/'t find a user with that e-mail address.": "We can't find a user with that e-mail address.",
+    "We can't find a user with that e-mail address.": "We can't find a user with that e-mail address.",
     "active": "active",
     "inactive": "inactive",
     "display": "display",
@@ -433,7 +433,6 @@
     "New Submit": "New Submit",
     "Field Label": "Field Label",
     "New Record List": "New Record List",
-    "Set the element/'s background color": "Set the element/'s background color",
     "primary": "primary",
     "secondary": "secondary",
     "danger": "danger",
@@ -450,7 +449,6 @@
     "Dark": "Dark",
     "Link": "Link",
     "Text color": "Text color",
-    "Set the element/'s text color": "Set the element/'s text color",
     "New Text": "New Text",
     "The text to display": "The text to display",
     "Font Weight": "Font Weight",
@@ -482,7 +480,6 @@
     "Placeholder": "Placeholder",
     "The placeholder is what is shown in the field when no value is provided yet": "The placeholder is what is shown in the field when no value is provided yet",
     "Help Text": "Help Text",
-    "Help text is meant to provide additional guidance on the field/'s value": "Help text is meant to provide additional guidance on the field/'s value",
     "New Select": "New Select",
     "New Option": "New Option",
     "Options List": "Options List",
@@ -497,7 +494,7 @@
     "Rows": "Rows",
     "The number of rows to provide for input": "The number of rows to provide for input",
     "New Date Picker": "New Date Picker",
-    "The label describes the button/'s text": "The label describes the button/'s text",
+    "The label describes the button's text": "The label describes the button's text",
     "The name of the button": "The name of the button",
     "The value being submitted": "The value being submitted",
     "Field Value": "Field Value",
