--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -287,8 +287,7 @@
     "Please contact your administrator to get started.": "Please contact your administrator to get started.",
     "Finding Requests available to you...": "Finding Requests available to you...",
     "New Request": "New Request",
-    "New Tasks": "New Tasks",
-    "No Tasks Found": "No Tasks Found",
+    "No Notifications Found": "No Notifications Found",
     "Dismiss": "Dismiss",
     "Dismiss All": "Dismiss All",
     "View All": "View All",
