update copy in request modal and en file

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -280,7 +280,7 @@
     "Due": "Due",
     "Started": "Started",
     "Open Request": "Open Request",
-    "We've made it easy for you to make the following Requests.": "We've made it easy for you to make the following Requests.",
+    "We've made it easy for you to start a Request for the following Processes. Select a Process to start your Request.": "We've made it easy for you to start a Request for the following Processes. Select a Process to start your Request.",
     "You don't have any Processes.": "You don't have any Processes.",
     "Please visit the Processes page": "Please visit the Processes page",
     "and click on +Process to get started.": "and click on +Process to get started.",
