--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -687,5 +687,6 @@
     "Account Timeout": "Account Timeout",
     "Your account has been timed out for security.": "Your account has been timed out for security.",
     "Please log in to continue your work on this page.": "Please log in to continue your work on this page.",
-    "Avatar": "Avatar"
+    "Avatar": "Avatar",
+    "Copy": "Copy"
 }
