Rename webhook to web entry

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -672,7 +672,7 @@
     "Permission To Start": "Permission To Start",
     "New Task": "New Task",
     "requester": "requester",
-    "Webhook": "Webhook",
+    "Web Entry": "Web Entry",
     "Screen For Input": "Screen For Input",
     "What Screen Should Be Used For Rendering This Task": "What Screen Should Be Used For Rendering This Task",
     "Task Notifications": "Task Notifications",
