new strongs for lang

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -688,5 +688,7 @@
     "Your account has been timed out for security.": "Your account has been timed out for security.",
     "Please log in to continue your work on this page.": "Please log in to continue your work on this page.",
     "Avatar": "Avatar",
-    "Copy": "Copy"
+    "Copy": "Copy",
+    "Advanced": "Advanced",
+    "Basic": "Basic"
 }
