--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -700,5 +700,36 @@
     "requesters": "requesters",
     "participants": "participants",
     "The process was archived.": "The process was archived.",
-    "Are you sure you want to archive the process ": "Are you sure you want to archive the process "
+    "Are you sure you want to archive the process ": "Are you sure you want to archive the process ",
+    "Restore": "Restore",
+    "Error":"Error",
+    "Time": "Time",
+    "Element": "Element",
+    "Canceled": "Canceled",
+    "Task Completed Successfully": "Task Completed Successfully",
+    "After importing, you can reassign users and groups to your Process.": "After importing, you can reassign users and groups to your Process.",
+    "ProcessMaker Spark does not import Environment Variables or Enterprise Packages. You must manually configure these features.": "ProcessMaker Spark does not import Environment Variables or Enterprise Packages. You must manually configure these features.",
+    "Unable to import": "Unable to import",
+    "Started import of": "Started import of",
+    "Incomplete import of": "Incomplete import of",
+    "Assign Start Event": "Assign Start Event",
+    "Assign": "Assign",
+    "to": "to",
+    "Assign Call Activity": "Assign Call Activity",
+    "Assign task": "Assign task",
+    "Run script": "Run script",
+    "as": "as",
+    "Package installed": "Package installed",
+    "The package is not installed": "The package is not installed",
+    "Process Category": "Process Category",
+    "Starting": "Starting",
+    "The following items should be configured to ensure your process is functional": "The following items should be configured to ensure your process is functional",
+    "List Processes": "List Processes",
+    "The screen was exported.": "The screen was exported.",
+    "Are you sure you want to delete the screen": "Are you sure you want to delete the screen",
+    "Export Screen": "Export Screen",
+    "You are about to export a Screen.": "You are about to export a Screen.",
+    "All the configurations of the screen will be exported.": "All the configurations of the screen will be exported.",
+    "Are you sure you want to delete the user": "Are you sure you want to delete the user",
+    "Are you sure you want to delete the auth client": "Are you sure you want to delete the auth client"
 }
