enable translation in screen builder

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -750,5 +750,30 @@
     "hour": "hour",
     "type here to search": "type here to search",
     "name": "name",
-    "[Select Active Process]": "[Select Active Process]"
+    "[Select Active Process]": "[Select Active Process]",
+    "New Script Task": "New Script Task",
+    "Design": "Design",
+    "Open Console": "Open Console",
+    "Add Screen": "Add Screen",
+    "Rich Text": "Rich Text",
+    "Navigation": "Navigation",
+    "Table": "Table",
+    "Submit": "Submit",
+    "Element Background color": "Element Background color",
+    "Rich Text Content": "Rich Text Content",
+    "The HTML text to display": "The HTML text to display",
+    "New Textarea": "New Textarea",
+    "Actions": "Actions",
+    "It must be a correct json format": "It must be a correct json format",
+    "Success": "Success",
+    "Colspan": "Colspan",
+    "No files available for download": "No files available for download",
+    "Screen Validation": "Screen Validation",
+    "Calculated Properties" : "Calculated Properties",
+    "Calcs": "Calcs",
+    "CSS": "CSS",
+    "Clear Color Selection": "Clear Color Selection",
+    "Drag an element here": "Drag an element here",
+    "Control Not Found": "Control Not Found",
+    "No Errors": "No Errors"
 }
