--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -779,5 +779,10 @@
     ":user has completed the task :task_name": ":user has completed the task :task_name",
     "The System": "The System",
     "Debugger": "Debugger",
-    "Run": "Run"
+    "Run": "Run",
+    "Upload BPMN File (optional)": "Upload BPMN File (optional)",
+    "The name of the manual task": "The name of the manual task",
+    "Variable Name": "Variable Name",
+    "The Name of the variable": "The Name of the variable",
+    "Manual Task": "Manual Task"
 }
