Add translations for script builder

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -792,5 +792,7 @@
     "New Collection Select": "New Collection Select",
     "Collections": "Collections",
     "Select a collection and fill the fields that will be used in the dropdownlist": "Select a collection and fill the fields that will be used in the dropdownlist",
-    "Dismiss Alert": "Dismiss Alert"
+    "Dismiss Alert": "Dismiss Alert",
+    "Sample Input": "Sample Input",
+    "Output": "Output"
 }
