--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -794,5 +794,6 @@
     "Select a collection and fill the fields that will be used in the dropdownlist": "Select a collection and fill the fields that will be used in the dropdownlist",
     "Dismiss Alert": "Dismiss Alert",
     "Sample Input": "Sample Input",
-    "Output": "Output"
+    "Output": "Output",
+    "Duplicate Script": "Duplicate Script"
 }
