--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -799,5 +799,10 @@
     "Select a user to set the API access of the Script": "Select a user to set the API access of the Script",
     "Successfully imported": "Successfully imported",
     "Importing": "Importing",
-    "All assignments were saved.": "All assignments were saved."
+    "All assignments were saved.": "All assignments were saved.",
+    "You have ": "You have ",
+    " overdue ": " overdue ",
+    " pending": " pending",
+    "The request was canceled.": "The request was canceled.",
+    "Manually Complete Request": "Manually Complete Request"
 }
