Translate screen type

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -797,5 +797,6 @@
     "Output": "Output",
     "Duplicate Script": "Duplicate Script",
     "Select a user to set the API access of the Script": "Select a user to set the API access of the Script",
-    "Successfully imported": "Successfully imported"
+    "Successfully imported": "Successfully imported",
+    "Display": "Display"
 }
