--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -806,5 +806,7 @@
     " pending": " pending",
     "The request was canceled.": "The request was canceled.",
     "Manually Complete Request": "Manually Complete Request",
-    "Are you sure you want to complete this request?": "Are you sure you want to complete this request?"
+    "Are you sure you want to complete this request?": "Are you sure you want to complete this request?",
+    "The process was restored.": "The process was restored.",
+    "Language:": "Language:"
 }
