--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -808,5 +808,6 @@
     "Manually Complete Request": "Manually Complete Request",
     "Are you sure you want to complete this request?": "Are you sure you want to complete this request?",
     "The process was restored.": "The process was restored.",
-    "Language:": "Language:"
+    "Language:": "Language:",
+    "The group was deleted.": "The group was deleted."
 }
